# valora

./: .gitignore  .gitmodules  Cargo.toml  ChangeLog.md  LICENSE  LICENSE.md  README.md  build.rs  deps  package.yaml  readme.md  rustfmt.toml  stack.yaml  valora.cabal
.github/workflows/: rust.yml
amicola/: Cargo.toml
amicola/src/: .regions.rs.swp  boundary_spans.rs  bounds.rs  ext.rs  geo.rs  grid_lines.rs  lib.rs  monotonics.rs  path.rs  regions.rs  sampling.rs  stroke.rs  stroker.rs  wind.rs
amicola/src/monotonics/: cubic_segment.rs  line_segment.rs  quadratic_segment.rs
amicola/src/path/: line_segment.rs
amicola_algo/: Cargo.toml
amicola_algo/src/: arena.rs  lib.rs
amicola_types/: Cargo.toml
amicola_types/src/: lib.rs
app/: Main.hs
examples/: circle.rs  circles.rs  diamonds.rs  flow.rs  flower.rs  jumba.rs  ngon.rs  noise.frag  noise.rs  pattern.frag  red.frag  simple.rs  social.rs  space.rs  stripe.frag  triangle.rs  tutorial1.rs  voronoi.rs  watercolor.rs
examples/pendulum/: main.rs
flow/: .gitignore  flow.cabal  package.yaml  stack.yaml
flow/app/: Main.hs
flow/src/: Compositing.hs  Coords.hs  Core.hs  Flow.hs  Geom.hs  Isotile.hs
flow/src/Scenes/: Isoflow.hs
flow/src/Traits/: Position.hs
formo/: Cargo.toml
formo/src/: lib.rs  rect.rs  space.rs
haskell/: stack.yaml  valora.cabal
haskell/src/: Poly.hs  VectorUtil.hs
haskell/src/Color/: Shaders.hs
haskell/src/Generators/: WaterColor.hs
haskell/src/Poly/: Translations.hs
legacy/mercury/src/: Raster.hs
legacy/mercury/src/Generators/: Ramp.hs
legacy/mercury/src/Patterns/: Tiles.hs
legacy/venus/: Cargo.toml  README.md  build.rs
legacy/venus/examples/: flow.rs  flower.rs  jumba.rs  ngon.rs  noise.rs  tutorial1.rs  watercolor.rs
legacy/venus/licenses/: palette-license.md
legacy/venus/poly/: Cargo.toml  readme.md
legacy/venus/poly/src/: lib.rs  ngon.rs  point.rs  poly.rs  rect.rs
legacy/venus/shaders/: batch.vert  blit.vert  near_filter.frag  texture.frag  voronoi.frag
legacy/venus/shaders/include/: common.vert
legacy/venus/src/: color.rs  entangle.rs  errors.rs  lib.rs  tween.rs
legacy/venus/src/actors/: mod.rs  walker.rs
legacy/venus/src/generators/: all_rgb.rs  spawner.rs  watercolor.rs
legacy/venus/src/gpu/: render.rs
legacy/venus/src/mesh/: mod.rs
legacy/venus/src/patterns/: grid.rs  mod.rs  sparkles.rs
legacy/venus/src/pipes/: loops.rs
legacy/venus/src/transforms/: warp.rs
licenses/: README.md
pirouette/: .gitignore  Cargo.toml  build.rs
pirouette/shaders/: .render.comp.swo  default.frag  default.vert  export.comp  render.comp
pirouette/src/: lib.rs
poly/src/: ellipse.rs  lib.rs  ngon.rs  point.rs  poly.rs  rect.rs  transforms.rs
poly/src/properties/: centered.rs  clipping.rs  distance.rs  path.rs
qpine/: Cargo.toml
qpine/src/: lib.rs
rainier/: Cargo.toml
rainier/src/: gpu.rs  lib.rs  raster.rs
rainier/src/shaders/: default.frag  default.vert
shaders/: blit.vert  custom.frag  default.glslv  default.vert  instance.vert  near_filter.frag  texture.frag  texture.glslv  texture.vert  voronoi.frag
shaders/blends/: normal.frag
shaders/include/: common.frag  common.vert
src/: Color.hs  Constants.hs  Continuous.hs  Coords.hs  Core.hs  Draw.hs  Flow.hs  Geom.hs  Img.hs  Isotile.hs  Patterns.hs  Poly.hs  Rand.hs  Raster.hs  Scan.hs  Shape.hs  Stroke.hs  Transformers.hs  VectorUtil.hs  Warp.hs  WaterColor.hs  Wiggle.hs  amicola.rs  attributes.rs  canvas.rs  color.rs  composition.rs  element.rs  entangle.rs  errors.rs  forms.rs  geo.rs  gpu.rs  lib.rs  noise_traits.rs  paint.rs  path.rs  rainier.rs  raster.rs  render.rs  (+7 more)
src/Color/: Shaders.hs
src/Components/: Watercolor.hs
src/Coords/: Math.hs
src/Generators/: Color.hs  WaterColor.hs
src/Patterns/: Flow.hs  Grid.hs  Isotile.hs  Sparkles.hs  Stripes.hs
src/Poly/: Math.hs  Properties.hs  Shapes.hs  Translations.hs
src/Rand/: Normal.hs  Spatial.hs  Stream.hs
src/Raster/: Mask.hs
src/Raster/Poly/: Scan.hs
src/Scenes/: CopyLines.hs  Isoflow.hs  Sandstroke.hs
src/Traits/: Meta.hs  Position.hs  Transform.hs
src/Transformers/: Subdivide.hs  Warp.hs  WaterColor.hs  Wiggle.hs
src/actors/: mod.rs  walker.rs
src/amicola/: geo.rs  raster.rs
src/amicola/raster/: gpu.rs  gpu_raster.rs  grid_lines.rs  path.rs  regions.rs  sampling.rs  surface.rs
src/attributes/: center.rs  collides.rs  contains.rs
src/composition/: assembly.rs  mod.rs
src/forms/: ellipse.rs  ngon.rs  polygon.rs  rect.rs
src/generators/: all_rgb.rs  mod.rs  spawner.rs  watercolor.rs
src/geom/: ellipse.rs  line.rs  mod.rs  point.rs  poly.rs  spawner.rs  transforms.rs
src/gpu/: mod.rs  programs.rs  render.rs  shaders.rs  tessellation.rs
src/gpu/shaders/: mod.rs
src/mesh/: mod.rs
src/patterns/: grid.rs  mod.rs  sparkles.rs  tile.rs  voronoi.rs
src/pipeline/: mod.rs
src/pipes/: mod.rs
src/properties/: centered.rs  clipping.rs  distance.rs  mod.rs  path.rs
src/raster/: buffer.rs  grid_lines.rs  mod.rs  path.rs  regions.rs  sampling.rs  surface.rs
src/render/: mod.rs
src/shaders/: default.frag  default.vert  glsl.rs  mod.rs  texture.frag
src/sketch/: animation.rs  mod.rs  shaded.rs
src/sketch/skins/: debug_walk.rs  dotted_line.rs  mod.rs
src/transforms/: mod.rs  rotate.rs  scale.rs  spatial.rs  subdivide.rs  translate.rs  warp.rs
test/: Spec.hs
uniform_derive/: Cargo.toml
uniform_derive/src/: lib.rs
valora/: Cargo.toml
valora/shaders/: default.glslf
valora/src/: element.rs  errors.rs  lib.rs  shaders.rs  sketch.rs
valora/src/geom/: mod.rs  poly.rs  shapes.rs
valora/src/pipeline/: mod.rs
valora/src/raster/: mod.rs
valora_derive/: Cargo.toml
valora_derive/src/: lib.rs
vend/tess2/: Cargo.toml  build.rs
vend/tess2/libtess2/: premake4.lua
vend/tess2/src/: lib.rs  safe.rs
works/: rustfmt.toml
works/circles/: Cargo.toml
works/circles/src/: main.rs
