[package]
name = "valora"
version = "0.1.0"
authors = ["Payton Turnage <paytonturnage@gmail.com>"]
edition = "2018"

[workspace]
members = ["amicola", "rainier"]

[dependencies]
amicola = { path = "amicola" }
rainier = { path = "rainier" }

[dev-dependencies]
itertools = "0.8.0"
nalgebra = "0.18.0"
noise = "0.6.0"
palette = "0.4.1"
