[package]
name = "valora"
version = "0.2.1"
authors = ["Payton Turnage <paytonturnage@gmail.com>"]
edition = "2018"
description = "A brush for generative fine art."
license = "MIT"

[workspace]
members = ["valora_derive"]

[dependencies]
glium = "0.25.1"
glutin = "0.21.1"
structopt = "0.3.0"
rand = "0.7.0"
itertools = "0.8.0"
failure = "0.1.5"
failure_derive = "0.1.5"
image = "0.22.3"
nalgebra = "0.18.0"
lyon_path = "0.14.0"
lyon_tessellation = "0.14.2"
lyon_tess2 = "0.14.0"
euclid = "0.20.4"
palette = "0.5.0"
rayon = "1.2.0"
arrayvec = "0.5.1"
lyon_geom = "0.14.1"
valora_derive = "0.1.0"
noise = "0.6.0"
glslwatch = "0.1.3"

[dev-dependencies]
itertools = "0.8.0"
nalgebra = "0.18.0"
