[package]
name = "valora"
version = "0.2.12"
authors = ["Payton Turnage <paytonturnage@gmail.com>"]
edition = "2018"
description = "A brush for generative fine art."
license = "MIT"
homepage = "https://github.com/turnage/valora"
repository = "https://github.com/turnage/valora.git"
readme = "readme.md"

[workspace]
members = [
  "valora_derive",
  "amicola"
]

[dependencies]
amicola = { path = "amicola" }
glium = "0.27"
glutin = "0.24"
structopt = "0.3.0"
rand = "0.7.0"
itertools = "0.8.0"
anyhow = "1"
image = "0.22.3"
nalgebra = "0.18.0"
lyon_path = "0.15.*"
lyon_tessellation = "0.15.*"
euclid = "0.20.4"
palette = "0.5.0"
rayon = "1.2.0"
arrayvec = "0.5.1"
lyon_geom = "0.14.1"
valora_derive = "0.1.0"
noise = "0.6.0"
glslwatch = "0.1.4"
winit = "0.22.0"
float-ord = "0.2.0"
geo-types = "0.6.1"
geo-booleanop = "0.3.2"
geo-offset = "0.1.0"

[dev-dependencies]
itertools = "0.8.0"
nalgebra = "0.18.0"

[features]
ci = []
