name:                valora
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/turnage/valora#readme
license:             BSD3
license-file:        LICENSE
author:              Payton Turnage
maintainer:          paytonturnage@gmail.com
copyright:           2017 Payton Turnage
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Rand
                     , Color
                     , Raster
                     , Scan
                     , Poly
                     , Poly.Math
                     , Patterns
                     , Transformers
                     , Transformers.Warp
                     , Transformers.Wiggle
                     , Transformers.Subdivide
  build-depends:       base >= 4.7 && < 5
                     , repa
                     , vector
                     , vector-algorithms
                     , random
                     , hashmap
                     , lens
                     , containers
                     , mtl
                     , split
  default-language:    Haskell2010
  extensions:          NamedFieldPuns
                     , DuplicateRecordFields
                     , OverloadedStrings
                     , NamedFieldPuns
                     , DeriveAnyClass
                     , GeneralizedNewtypeDeriving
                     , RecordWildCards
                     , OverloadedLabels
                     , ExistentialQuantification
                     , DeriveFunctor

executable valora-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , valora
                     , repa
                     , repa-io
                     , vector
  default-language:    Haskell2010

test-suite valora-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , valora
                     , hspec
                     , vector
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/valora
