name:                valora
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/turnage/valora#readme
license:             BSD3
license-file:        LICENSE
author:              Payton Turnage
maintainer:          paytonturnage@gmail.com
copyright:           2017 Payton Turnage
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Color
                     , Color.Shaders
                     , Constants
                     , Coords
                     , Coords.Math
                     , Generators.Ramp
                     , Generators.Color
                     , Generators.WaterColor
                     , Raster
                     , Raster.Mask
                     , Raster.Poly.Scan
                     , Poly
                     , Poly.Properties
                     , Poly.Shapes
                     , Patterns.Tiles
                     , Patterns.Sparkles
                     , Transformers.Warp
                     , Transformers.Wiggle
                     , Transformers.Subdivide
                     , VectorUtil
  build-depends:       base >= 4.7 && < 5
                     , repa
                     , vector
                     , vector-algorithms
                     , random
                     , hashmap
                     , lens
                     , containers
                     , mtl
                     , split
                     , MonadRandom
                     , normaldistribution
  default-language:    Haskell2010
  extensions:          NamedFieldPuns
                     , DuplicateRecordFields
                     , OverloadedStrings
                     , NamedFieldPuns
                     , DeriveAnyClass
                     , GeneralizedNewtypeDeriving
                     , RecordWildCards
                     , OverloadedLabels
                     , ExistentialQuantification
                     , DeriveFunctor
                     , RankNTypes
                     , TupleSections
                     , ScopedTypeVariables

executable valora-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , valora
                     , repa
                     , repa-io
                     , vector
                     , MonadRandom
                     , random
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/valora
