[package]
name = "amicola"
version = "0.1.0"
authors = ["Payton Turnage <pt@paytonturnage.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/turnage/valora/amicola"
description = "A rasterizer for fine art"

[dependencies]
failure = "0.1.5"
failure_derive = "0.1.5"
itertools = "0.8.0"
nalgebra = "0.18.0"
float-ord = "0.2.0"
log = "0.4.8"
enum_dispatch = "0.2.0"
derive_more = "0.15.0"
vek = "0.9.10"
roots = "0.0.5"
arrayvec = "0.5.1"

[dev-dependencies]
pretty_assertions = "0.6.1"
pretty_env_logger = "0.3.1"

[features]
release_max_level_off = []
