[package]
name = "amicola"
version = "0.1.0"
authors = ["Payton Turnage <pt@paytonturnage.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/turnage/valora/amicola"
description = "A rasterizer for fine art"

[dependencies]
failure = "0.1.5"
failure_derive = "0.1.5"
itertools = "0.8.0"
nalgebra = "0.18.0"
float-ord = "0.2.0"
log = "0.4.8"
enum_dispatch = "0.2.0"
derive_more = "0.15.0"
vek = "0.9.10"
roots = "0.0.5"
arrayvec = "0.5.2"
newtype_derive = "0.1.6"
pathfinder_path_utils = "0.2.0"
lyon_path = "0.15"
euclid = "0.20.4"
lyon_geom = "0.15"
bitvec = "0.17.4"
structopt = "0.3.13"
geo-types = "0.6.1"
num-traits = "0.2.14"

[dev-dependencies]
pretty_assertions = "0.6.1"
pretty_env_logger = "0.3.1"
maplit = "1.0.2"

[features]
release_max_level_off = []
