[package]
name = "pirouette"
version = "0.1.0"
edition = "2018"
authors = ["Payton Turnage <paytonturnage@gmail.com>"]

[dependencies]
image = "0.23"
winit = "0.22"
cgmath = "0.17"
shaderc = "0.6"
env_logger = "0.7"
log = "0.4"
wgpu = "0.6"
futures = "0.3"
bytemuck = { version = "1.4", features = ["derive"] }
anyhow = "1"
float-ord = "0.2"
derivative = "2"

[build-dependencies]
anyhow = "1"
fs_extra = "1"
glob = "0.3"
shaderc = "0.6"

