[package]
name = "valora"
version = "0.1.0"
authors = ["Payton Turnage <paytonturnage@gmail.com>"]
description = "Declarative generative art toolkit."
license = "MIT"
build = "build.rs"

[profile.release]
debug = true

[dependencies]
glium = "0.19"
glossy = "0.2.0"
lyon =  "0.8"
error-chain = "0.11"
palette = "0.2"
rand = "0.3"
image = "0.18"
petgraph = "0.4.10"
itertools = "0.7.4"
num = "0.1"
tess2 = "0.3"
rayon = "0.9"
noise = "0.4.1"
structopt = "0.1"
structopt-derive = "0.1"
poly = { path = "poly" }
lazy_static = "1.0.0"

[build-dependencies]
glossy_codegen = { git = "https://github.com/turnage/rust-glossy", default-features = false }
glob = "0.2.11"

[workspace]
